--- a/quotes.yml
+++ b/quotes.yml
@@ -30,3 +30,19 @@
   created_at: 2012-10-29 23:40:27.849501360 +00:00
   deleted: false
   id: 6
+- quote: Ship it!
+  added_by: steggy
+  created_at: 2012-10-30 23:12:21.947822105 +00:00
+  deleted: false
+  id: 7
+- quote: ! '"The tyranny of the opium warred"'
+  added_by: steggy
+  created_at: 2012-11-01 17:47:37.550195539 +00:00
+  deleted: false
+  id: 8
+- quote: Fundamentally, computers can do anything that we can do, we can just figure
+    out how
+  added_by: whunt
+  created_at: 2012-11-06 01:02:09.312678203 +00:00
+  deleted: false
+  id: 9
