adding rolling, youtube

--- a/quotes.yml
+++ b/quotes.yml
@@ -69,3 +69,30 @@
   created_at: 2012-11-29 00:38:33.730327116 +00:00
   deleted: false
   id: 13
+- quote: steggybot
+  added_by: steggy
+  created_at: 2012-12-10 21:20:48.081082094 +00:00
+  deleted: false
+  id: 14
+- quote: steggybot
+  added_by: czhang
+  created_at: 2012-12-10 21:20:49.172407837 +00:00
+  deleted: false
+  id: 15
+- quote: On two occasions I have been asked, 'Pray, Mr. Babbage, if you put into the
+    machine wrong figures, will the right answers come out?' I am not able rightly
+    to apprehend the kind of confusion of ideas that could provoke such a question.
+  added_by: steggy
+  created_at: 2012-12-21 19:56:39.357392922 +00:00
+  deleted: false
+  id: 16
+- quote: <shijing> 2. children are easy
+  added_by: steggy
+  created_at: 2013-01-04 01:13:46.433894013 +00:00
+  deleted: false
+  id: 17
+- quote: <steggy> !addquote <shijing> 2. children are easy
+  added_by: Asterism
+  created_at: 2013-01-04 01:16:09.923786328 +00:00
+  deleted: false
+  id: 18
