Adding the plusplus feature

--- a/plusplus.yml
+++ b/plusplus.yml
@@ -1,3 +1,36 @@
 ---
 steggy_meeting:
   dude: 2
+  some stuff: 2
+steggy:
+  wsong: 1
+  dude: 1
+  skimbrel: 1
+  nfair: 1
+czhang:
+  steggy: 3
+  czhang: 1
+  skimbrel: 1
+  mimblewhimble: 1
+skimbrel:
+  C: 2
+  wsong: 3
+  czhang: 1
+  ians: 1
+  skimbrel: 2
+  sara: 1
+  bordicon: 1
+  whunt: 1
+sushis:
+  nfair: 1
+nfair:
+  steggy: 1
+edilaic:
+  x: 1
+whunt:
+  steggybot: 1
+  hail_spacecake: 1
+Asterism:
+  steggybot: 1
+ians:
+  ians: 2
