--- a/quotes.yml
+++ b/quotes.yml
@@ -96,3 +96,8 @@
   created_at: 2013-01-04 01:16:09.923786328 +00:00
   deleted: false
   id: 18
+- quote: <acanyon> oh! yes! come!
+  added_by: steggy
+  created_at: 2013-03-06 01:09:40.741782326 +00:00
+  deleted: false
+  id: 19
