--- a/plusplus.yml
+++ b/plusplus.yml
@@ -3,34 +3,210 @@ steggy_meeting:
   dude: 2
   some stuff: 2
 steggy:
-  wsong: 1
+  wsong: 4
   dude: 1
-  skimbrel: 1
   nfair: 1
+  skimbrel: 1
+  ! 'just showing off ': -1
+  pitchfork reviews: 1
+  graze: 1
+  the regex isn't .*: 1
+  stupid puzzle dragon bullshit: -2
+  ians: 4
+  laughinghan: 1
+  stupid dragon puzzle bullshit: -1
+  whunt not so subtle "I'm gay" jokes: 1
+  video games: 1
+  aioli: 1
+  coffee: 1
+  on-call: -1
+  sleep deprivation: -1
+  ! 'also, damnit ians, don''t say just ': 1
+  ! 'quick, say ': -1
+  Asterism: 1
+  czhang: 1
+  macros: 1
+  emacs: 1
+  non modal editing: 1
+  clickodrome: -1
 czhang:
   steggy: 3
   czhang: 1
-  skimbrel: 1
+  skimbrel: 4
   mimblewhimble: 1
+  kiwis: 2
+  heidi: 4
+  steggybot: 1
+  graze: 2
+  baltar: -3
+  pengies: 3
+  raisins: -1
+  haters: 1
+  angie: 1
+  whunt: 1
+  spaceteam: 2
+  grazebox: 4
+  textmate: 1
+  ! '#csua': 1
+  pazudora: 1
+  stupid puzzle dragon bullshit: 1
+  omg grazebox: 1
+  duck fat: 1
+  fawkes: 1
+  doves: 1
 skimbrel:
   C: 2
-  wsong: 3
-  czhang: 1
-  ians: 1
+  wsong: 5
+  czhang: 2
+  ians: 2
   skimbrel: 2
   sara: 1
   bordicon: 1
-  whunt: 1
+  implicit: -1
+  strcmp: -1
+  satw: 1
+  Hail_Spacecake: 2
+  rainymood: 1
+  czhang1: 1
+  fixing bugs by adding elifs: 1
+  ezpz: 1
+  raisins: -1
+  freenode: 1
+  steggybot: -9
+  ruby: -1
+  duck fat: 1
 sushis:
   nfair: 1
 nfair:
   steggy: 1
 edilaic:
   x: 1
+  ^^: 1
 whunt:
-  steggybot: 1
   hail_spacecake: 1
+  angie: 2
+  graze: -.inf
+  baltar: 4
+  pengies: 2
+  googleio: -1
+  grazebox: -14
+  cute kittens: 1
+  activeadmin: -4
+  heidi: 6
+  baltar_dance: 1
+  jayferd: 2
+  asterism: 2
+  spaceteam: 1
+  netrunner: 1
+  ians: -4
+  names_that_end_in_1: -1
+  steggy: 1
+  ! '#csua': 1
+  laughinghan: 1
+  frakking: -1
+  skimbrel: 2
+  macros: 2
+  czhang: 1
+  fawkes: 1
 Asterism:
-  steggybot: 1
+  steggybot: 2
+  graze: 3
+  fuck y'all install an emulator: 1
+  the old reader: 1
+  netrunner: 1
+  ians: 1
+  also netrunner: 1
 ians:
   ians: 2
+  pazudora: 2
+  whunt: -2
+  spaceteam: -1
+  lifting: 2
+  gains: 1
+  gym: 1
+  angie: 1
+  aioli: 1
+  district: 1
+  duck fat: 1
+  pengies: -1
+  pengdras: 1
+  coffee: 1
+  pandas: 1
+wsong:
+  czhang: 1
+  stupid puzzle dragon bullshit: -1
+  spaceteam: 1
+angie:
+  ! 'oh, so when skimbrel was ++ or ': -1
+  skimbrel: 1
+  steggybot: 1
+  raisins: -1
+  nickserv: 1
+skimbrell:
+  skimbrell: 1
+kiwis:
+  asterism: 1
+  celery: -1
+  wasabi: 1
+  skimbrel: 1
+  graze: .inf
+  rain: 1
+  steggybot: 1
+  pengies: 1
+  czhang: 2
+  riderofrohan0: 1
+  steggy: 1
+  baltar: -1
+czhang1:
+  whunt: -1
+riderofrohan0:
+  rain: -1
+  steggybot: 1
+  giving_context: 1
+whunt1:
+  graze: -1
+sean___:
+  timing: 1
+  heidi: 1
+Hail_Spacecake:
+  cute kittens: 1
+  C++: -1
+  楕円曲線暗号: 1
+  --: -2
+  ++: 1
+  commented-out cod: -1
+  gazebos: 1
+heidi1:
+  gaius: -1
+  baltar: -1
+jayferd:
+  active*: -1
+  commented code-: -1
+  commented-out code: -1
+  --: 1
+  ++: -1
+  newsblur: 1
+  oO: 1
+  whunt: 1
+  ians: 1
+  duck fat: -1
+heidi:
+  baltar: -3
+  graze: 1
+  baltar_dance: 1
+  activeadmin: -1
+  whunt: 1
+  ghosting other bitches who try to steal your nick: 1
+  piggies: 1
+  mayonnaise: 1
+  frakking: -1
+  pengies: 2
+  boys in suits: 1
+  skimbrel: 1
+  facial hair: -1
+  pubbies: -1
+  doves: 1
+  the super trooper: 1
+  jlhawn: 1
+sean____:
+  spaceteam: 1
