--- a/quotes.yml
+++ b/quotes.yml
@@ -101,3 +101,8 @@
   created_at: 2013-03-06 01:09:40.741782326 +00:00
   deleted: false
   id: 19
+- quote: Cats and dogs living together!  Mass hysteria!
+  added_by: wsong
+  created_at: 2013-03-12 00:08:56.889891000 +00:00
+  deleted: false
+  id: 20
