--- a/pddata.yml
+++ b/pddata.yml
@@ -1,21 +1,21 @@
 ---
 edilaic:
-  :fc: '351,047,252'
+  :friend_code: '351,047,252'
   :added_by: edilaic
   :updated_at: !ruby/object:DateTime 2013-03-27 13:33:31.066862289 -07:00
 ians:
-  :fc: '313,146,247'
+  :friend_code: '313,146,247'
   :added_by: edilaic
   :updated_at: !ruby/object:DateTime 2013-03-27 13:38:07.990375932 -07:00
 czhang:
-  :fc: '353,940,257'
+  :friend_code: '353,940,257'
   :added_by: edilaic
   :updated_at: !ruby/object:DateTime 2013-03-27 13:38:26.884252641 -07:00
 heidi:
-  :fc: '337,341,236'
+  :friend_code: '337,341,236'
   :added_by: edilaic
   :updated_at: !ruby/object:DateTime 2013-03-27 13:38:54.033027915 -07:00
 whunt:
-  :fc: '325,635,299'
+  :friend_code: '325,635,299'
   :added_by: whunt
   :updated_at: !ruby/object:DateTime 2013-03-27 14:20:22.753367363 -07:00
