tweak gitignore to ignore junk on my comp too, also added .ruby-version for rbenv-users (this is new way, better than old .rbenv-version way)

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# Ignore data files
-db
-*.yml
-*.json
-
 # Ignore vim swap files
 *.sw[a-p]
 
 # Ignore OSX files
 .DS_Store
+
+#Ignore linux backup files
+*~
